# CrashReporter

./: .gitignore  LICENSE  README.md
Client/: .clang-format  CMakeLists.txt  CrashReporter.sln
Client/CrashDemo/: CrashDemo.cpp  CrashDemo.vcxproj  CrashDemo.vcxproj.filters
Client/CrashReporter/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Constants.h  CrashData.h  CrashReporter.cpp  CrashReporter.hpp  CrashReporter.rc  CrashReporter.vcxproj  CrashReporter.vcxproj.filters  DataCollector.cpp  DataCollector.h  DataReporter.cpp  DataReporter.h  DbgHelpLib.cpp  DbgHelpLib.h  IDataCollector.h  IDataReporter.h  Log.cpp  Log.h  Md5.cpp  Md5.h  Resource.h  StringCov.cpp  StringCov.h  ZipFileWriter.cpp  ZipFileWriter.h
